Фикс для серверного терминала, чтобы жюри увидели 6 код
